--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <div class="character">
-    <img src="https://i.imgur.com/2ZCqZzU.png" alt="Feminine cartoon character" />
+    <img src="pig.png" alt="Feminine cartoon character" />
   </div>
 
   <div class="chat">
