--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background: url('https://i.imgur.com/2ZCqZzU.png') center/cover no-repeat;
+      background: url('pig.png') center/cover no-repeat;
       margin-left: 10px;
     }
   </style>
